@@ -1,3 +1,11 @@
+2004-03-26  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* dialogs/gedit-dialog-replace.c
+	(replace_dlg_replace_button_pressed): cosmetic changes
+
+	* gedit-document.c (gedit_document_find): fixed bug #138051 (Reproducible 
+	search/replace dialog application lockup).
+
 2004-03-13  Rob Adams  <readams@readams.net>
 
 	* dialogs/gedit-preferences.glade2: Change type hint to
